# ReportBattle

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Dockerfile.dev  pyproject.toml  run.bat  run.sh
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: auth.py  reports.py  roster.py  users.py
backend/app/core/: auth.py  config.py  encryption.py
backend/app/schemas/: battle_report.py  roster.py  user.py
backend/app/services/: battle_report.py  roster_parser.py  user.py
docs/: features.md  tech-stack.md  todo.md
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/reports/[id]/: page.tsx
frontend/app/reports/[id]/edit/: page.tsx
frontend/app/reports/[id]/write/: page.tsx
frontend/app/reports/new/: page.tsx
frontend/components/reports/: army-list-editor.tsx  report-form.tsx  turn-editor.tsx
frontend/components/reports/write/: battle-map.tsx  event-list.tsx  narrative-editor.tsx  phase-controls.tsx  roster-column.tsx  score-bar.tsx  turn-ribbon.tsx  types.ts  unit-chip.tsx  vs-banner.tsx
supabase/migrations/: 001_users.sql  002_battle_reports.sql  003_battle_turns.sql  004_army_lists.sql  005_battle_turns_phase.sql
